# pkg_srv

./: Cargo.toml
pkg_srv/: Cargo.toml  app.icns  backup.db  chromium.icns  chromium.icon  config.toml
pkg_srv/src/: chromium_icon.rs  image_util.rs  main.rs  svg_png.rs
pkg_srv/src/oem_tool/: chromium_icon.rs  image_util.rs  mod.rs  oem_srv.rs
pkg_srv/src/pkg_tool/: mod.rs  pkg_build.rs
pkg_srv/src/templates/: index.html  pkgbuild.html
