[package]
name = "pkg_srv"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
axum = { version = "0.7.9", features = ["multipart"] }
axum-login = "0.16.0"
base64 = "0.22.1"
icns = "0.3.1"
ico = "0.3.0"
image = "0.25.5"
imageproc = "0.25.0"
pic-scale = "0.3.5"
resize = "0.8.8"
resvg = "0.44.0"
serde = { version = "1.0.215", features = ["derive"] }
svg = "0.18.0"
tiny-skia = "0.11.4"
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.18"
usvg = "0.44.0"
