[package]
name = "pkg_srv"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
axum = { version = "0.7.9", features = ["multipart"] }
axum-login = "0.16.0"
base64 = "0.22.1"
chrono = "0.4.39"
icns = "0.3.1"
ico = "0.3.0"
image = "0.25.5"
imageproc = "0.25.0"
itertools = "0.13.0"
md5 = "0.7.0"
pic-scale = "0.3.5"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["json"] }
resize = "0.8.8"
resvg = "0.44.0"
rust-crypto = "0.2.36"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "sqlite"] }
svg = "0.18.0"
svgo = "0.0.4"
tiny-skia = "0.11.4"
tokio = { version = "1.41.1", features = ["full"] }
toml = "0.8.19"
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.18"
usvg = "0.44.0"
walkdir = "2.5.0"
